--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>OLGA: Open Limited-area Gliding Analysis by olga</title>
+    <title>OLGA by olga</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>OLGA: Open Limited-area Gliding Analysis</h1>
-          <h2>OLGA</h2>
+          <h1>OLGA</h1>
+          <h2>Open Limited-area Gliding Analysis</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -31,11 +31,6 @@
         <section id="main_content">
           <h3>
 <a id="olga" class="anchor" href="#olga" aria-hidden="true"><span class="octicon octicon-link"></span></a>OLGA</h3>
-
-<h2>
-<a id="open-limited-area-gliding-analysis" class="anchor" href="#open-limited-area-gliding-analysis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Limited-area Gliding Analysis</h2>
-
-<p>Info, etc.</p>
         </section>
 
         <footer>
