--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CLASS</title>
+    <title>OLGA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -72,7 +72,7 @@
       <hr>
 
       <h4>About</h4>
-      <p>OLGA is a framework, built around the WRF-ARW mesoscale model, to produce gliding specific weather forecasts. It automates all the steps involved; downloading the input data, running WRF, post-processing of the results and making plots/figures. OLGA is still in development: we are busy testing the code, validating the setup, writing documentation, etc. Anyone who is interested in trying OLGA is welcome to do so - we would be happy to help - but don't expect a finished product :-) When the time is right, an official 1.0 version will be released.
+      <p>OLGA is a Python framework, built around the WRF-ARW mesoscale model, to produce gliding specific weather forecasts. It automates all the steps involved; downloading the GFS input data, running WRF, post-processing the output of WRF, and creating maps/time series/soundings.  OLGA is still in development: we are busy testing the code, validating the setup, etc. Anyone who is interested in using OLGA is welcome to do so - we would be happy to help - but don't expect a finished product :-) When the time is right, an official 1.0 version will be released.
       <div class="row-fluid">
         <div class="span6">
          
