Added some more up-to-date figures

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <hr>
 
       <h4>About</h4>
-      <p>OLGA is a framework, built around the WRF-ARW mesoscale model, to produce gliding specific weather forecasts. It automates all the steps involved; downloading the input data, running WRF, post-processing of the results and making plots/figures. OLGA is still in development: we are busy testing the code, validating the setup, writing documentation, etc. Anyone who is interested in trying OLGA is welcome to do so - we would be happy to help - but don't expect a finished product :-) When the time is right, an official 1.0 version will be released.
+      <p>OLGA is a framework, built around the WRF-ARW mesoscale model, to produce gliding specific weather forecasts. It automates all the steps involved; downloading the (GFS) input data, running WRF, post-processing of the results and making plots/figures. OLGA is still in development: we are busy testing the code, validating the setup, writing documentation, etc. Anyone who is interested in trying OLGA is welcome to do so - we would be happy to help - but don't expect a finished product :-) When the time is right, an official 1.0 version will be released.
       <div class="row-fluid">
         <div class="span6">
          
@@ -94,8 +94,8 @@
 
       <center>
         <img src="figures/pfd_ventus_01_000000.png"/>
-        <img src="figures/tser_EHWO_01_000000.png"/>
-        <img src="figures/wind1000m_01_000200.png"/>
+        <img src="figures/tser_06260_01_000000.png"/>
+        <img src="figures/ziglider_01_001200.png"/>
       </center>
 
 
